--- a/tox.ini
+++ b/tox.ini
@@ -1,44 +1,20 @@
 [tox]
-envlist = pre-commit,py{37,38,39,310}-sql{12,13,14,20}
+envlist = pre-commit,py{27,35,36,37}-sql{11,12,13}
 skipsdist = true
 minversion = 3.7.0
 
-[gh-actions]
-python =
-    3.7: py37
-    3.8: py38
-    3.9: py39
-    3.10: py310
-
-[gh-actions:env]
-SQLALCHEMY =
-    1.2: sql12
-    1.3: sql13
-    1.4: sql14
-    2.0: sql20
-
 [testenv]
-passenv = GITHUB_*
 deps =
     .[test]
+    sql11: sqlalchemy>=1.1,<1.2
     sql12: sqlalchemy>=1.2,<1.3
     sql13: sqlalchemy>=1.3,<1.4
-    sql14: sqlalchemy>=1.4,<1.5
-    sql20: sqlalchemy>=2.0.0b3
-setenv =
-    SQLALCHEMY_WARN_20 = 1
 commands =
-    python -W always -m pytest graphene_sqlalchemy --cov=graphene_sqlalchemy --cov-report=term --cov-report=xml {posargs}
+    pytest graphene_sqlalchemy --cov=graphene_sqlalchemy {posargs}
 
 [testenv:pre-commit]
-basepython=python3.10
+basepython=python3.7
 deps =
     .[dev]
 commands =
     pre-commit {posargs:run --all-files}
-
-[testenv:flake8]
-basepython = python3.10
-deps = -e.[dev]
-commands =
-    flake8 --exclude setup.py,docs,examples,tests,.tox --max-line-length 120
